@@ -2,6 +2,7 @@
 v1.0.0-git
 ----------
 
+[jan] Officially support PHP 7.
 [jan] Don't use LIKE search on inventory ID field (Bug #12976).
 
 
